@@ -40,8 +40,8 @@ public class ConjunctionSolrSpellCheckerTest extends SolrTestCase {
     @SuppressWarnings("unchecked")
     Class<StringDistance> sameDistance = (Class<StringDistance>) AVAILABLE_DISTANCES[random().nextInt(AVAILABLE_DISTANCES.length)];
     
-    StringDistance sameDistance1 = sameDistance.newInstance();
-    StringDistance sameDistance2 = sameDistance.newInstance();
+    StringDistance sameDistance1 = sameDistance.getConstructor().newInstance();
+    StringDistance sameDistance2 = sameDistance.getConstructor().newInstance();
     
     //NGramDistance defaults to 2, so we'll try 3 or 4 to ensure we have one that is not-equal.
     StringDistance differentDistance = new NGramDistance(3);
